fix(rtplot): avoid Math.clamp for the Java 17 build
Math.clamp was added in Java 21. The CLS build uses Java 17, so use
Math.max/Math.min instead. The bounds are always ordered at these calls.